[gd_scene load_steps=2 format=3 uid="uid://cieo33rija636"]

[ext_resource type="Script" path="res://scenes/ui/chat/Chat.gd" id="1_n12wc"]

[node name="Chat" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_n12wc")

[node name="MessagesOutput" type="TextEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Nenhuma mensagem por hora..."
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SendButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Enviar mensagem"

[node name="TextInput" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="text_submitted" from="HBoxContainer/TextInput" to="." method="_on_text_input_text_submitted"]
